--- a/index.html
+++ b/index.html
@@ -1,52 +1,70 @@
 <!DOCTYPE html>
+
+<!-- Stephen McCormick
+	Final HTML -->
 <html>
-
-  <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Javascript-final : Final for JavaScript" />
-
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Javascript-final</title>
-  </head>
-
-  <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/StephenMcCormick/JavaScript-Final">View on GitHub</a>
-
-          <h1 id="project_title">Javascript-final</h1>
-          <h2 id="project_tagline">Final for JavaScript</h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/StephenMcCormick/JavaScript-Final/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/StephenMcCormick/JavaScript-Final/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h1>
-<a name="javascript-final" class="anchor" href="#javascript-final"><span class="octicon octicon-link"></span></a>JavaScript-Final</h1>
-
-<p>Final for JavaScript</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Javascript-final maintained by <a href="https://github.com/StephenMcCormick">StephenMcCormick</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
+	<head>
+		<title> JavaScript - Midterm/Final Exam </title>
+		<link rel="stylesheet" type="text/css" href="style.css" /> <!-- this calls the CSS file-->
+		
+	</head>
+	
+	<body>
+	
+		<h1 id="pageTitle"> Agreement Page </h1>
+		<div id="section1" class="contentBox">
+		
+			<p> Please click on the following documents to continue </p>
+			
+			<ul>
+				<li> <a href="#" id="agreeLink1" />Document 1</a> </li>
+				<li> <a href="#" id="agreeLink2" />Document 2</a> </li>
+			</ul>
+		
+		</div>	
+		
+		
+		<div id="section2" class="contentBox">
+			
+			<p> Please read and scroll the following document and agree to the terms and conditions. </p>
+			
+			<div class="scrollBoxWrapper">
+			<div id="agreeScroll" class="scrollBox">
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla tincidunt libero sed mi egestas cursus. Mauris turpis odio, lacinia sed purus a, tincidunt tincidunt tortor. Ut molestie diam non lorem aliquet cursus. Suspendisse potenti. Phasellus in odio enim. Sed volutpat, purus ac laoreet pellentesque, sapien urna varius ipsum, eget volutpat nulla neque at felis. Curabitur blandit vitae nulla vitae consectetur. Pellentesque pellentesque orci leo, a pretium ante cursus vitae. Vestibulum venenatis vehicula aliquet. Pellentesque imperdiet aliquet odio quis viverra. Aliquam tincidunt aliquet euismod. In id ornare nunc, quis sodales nunc. Aliquam venenatis sed lacus eget tristique.
+				</p>
+				<p>
+					Nullam at odio eu urna dictum consectetur. Proin vitae vulputate odio, viverra imperdiet est. Aenean quam lectus, vehicula vitae euismod nec, luctus eget elit. Quisque consectetur non nisi tempor tempus. Etiam eleifend ipsum neque, sit amet cursus lectus feugiat sit amet. Curabitur laoreet, est suscipit imperdiet consequat, tortor diam venenatis mi, eget convallis est sem quis felis. Sed suscipit lorem scelerisque magna porttitor auctor. Aenean eget dui dignissim, iaculis tortor ut, blandit orci.
+				</p>
+				<p>
+					Duis iaculis sem neque, vitae imperdiet velit fringilla et. Nullam nunc justo, venenatis sit amet justo vel, convallis scelerisque metus. Quisque nec sodales lectus. Praesent sagittis augue sed dui euismod elementum. Maecenas vel nulla id massa pulvinar facilisis. Quisque aliquam nulla velit. In viverra tempus erat vitae egestas.
+				</p>
+				<p>
+					Nunc nec dapibus ante. Nullam dictum ut sem mollis pulvinar. Quisque tincidunt non erat vel convallis. Ut metus nibh, euismod in ultricies vel, congue eget metus. Sed laoreet lacinia sollicitudin. Mauris dictum diam et gravida ullamcorper. Fusce libero leo, ultricies pellentesque justo vitae, adipiscing dictum metus. Aenean convallis elit a iaculis imperdiet.
+				</p>
+				<p>
+					Cras aliquet neque et rhoncus mollis. Ut rhoncus elit neque, sit amet ullamcorper purus venenatis quis. Etiam molestie, libero nec commodo vestibulum, libero erat consequat lorem, eu elementum quam lacus et eros. Cras vitae lacus id felis euismod ullamcorper. Cras et leo quis tortor molestie vehicula. Sed lobortis mauris quis eleifend posuere. Suspendisse iaculis ultrices massa. Vivamus a libero vel mauris feugiat elementum. 
+				</p>
+			</div>
+			</div>
+			
+			<form name="mform" id="mainform" action="">
+			
+				<input type="radio" id="agree" name="agreeForm" value="agree" disabled="disabled" /> <label for="agree"> I <strong>agree</strong> to the terms and conditions of the document</label>
+				<br />
+				<input type="radio" id="notagree" name="agreeForm" value="notagree" disabled="disabled" /> <label for="notagree"> I <strong>do not agree</strong> to the terms and conditions of the document</label>
+			
+				<br /><br />
+				<input type="button" id="submitAgreement" value="Continue" />
+			</form>
+			</form>
+		</div>
+		
+		<div id="conformation">
+		</div>
+	
+	
+	<script type="text/javascript" src="jquery.js"></script>  <!-- this calls the Jquery file-->
+	<script type="text/javascript" src="javascript.js"></script>  <!-- this calls the JavaScrip file-->
+	</body>
 </html>
